refactor: return light box resource for attached boxes in Box details
